<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <ImageView
        android:id="@+id/idIVHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/header_desc"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wave_orange" />

    <ImageButton
        android:id="@+id/idIBPrevious"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_previous"
        android:tint="@color/orange_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIVHeader" />

    <!--    avatar-->
    <ImageView
        android:id="@+id/idIVProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIBPrevious"
        app:srcCompat="@drawable/ic_anonymity" />

    <TextView
        android:id="@+id/idTVChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_avatar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/idIBcamera"
        app:layout_constraintStart_toStartOf="@+id/idIBPrevious"
        app:layout_constraintTop_toTopOf="@+id/idIBcamera" />

    <ImageButton
        android:id="@+id/idIBcamera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="@+id/idIVProfileImage"
        app:layout_constraintStart_toStartOf="@+id/idIVProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/idIVProfileImage" />

    <!--form-->
    <EditText
        android:id="@+id/idETFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIBcamera" />

    <EditText
        android:id="@+id/idETLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idETFirstName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/idBTRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/validate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>