<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mathematics.MathsCategoryActivity">

    <ImageView
        android:id="@+id/idIVHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/header_desc"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wave_orange" />

    <ImageButton
        android:id="@+id/idIBPrevious"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_previous"
        android:tint="@color/orange_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIVHeader" />

    <ImageButton
        android:id="@+id/idIBUser"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_user"
        android:tint="@color/orange_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIVHeader" />

    <TextView
        android:id="@+id/idTVMaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mathematics"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/idIBPrevious"
        app:layout_constraintTop_toBottomOf="@+id/idIBPrevious" />

    <View
        android:id="@+id/idVDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/idTVMaths"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTVMaths"
        android:layout_marginTop="180dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idTVMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/multiplications"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idVDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVmultiplyCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVMultiply"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/idTVTimedMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/timed_multiplications"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idRVmultiplyCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVTimedMultiplyCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVTimedMultiply"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/idTVAdditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/additions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idRVTimedMultiplyCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVAdditionsCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVAdditions"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/idTVTimedAdditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/timed_additions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idRVAdditionsCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVTimedAdditionsCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVTimedAdditions"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/idTVSubstractions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/substractions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idRVTimedAdditionsCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVSubstractionsCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVSubstractions"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/idTVTimedSubstractions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/timed_substractions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idRVSubstractionsCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVTimedSubstractionsCategory"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:scrollbars="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTVTimedSubstractions"
                app:layout_constraintVertical_chainStyle="packed" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>